boreal/tests/assets/invalid_files/compilation/import_invalid.yar
import "time"
import ""

rule a {
    condition: true
}
